@@ -2,7 +2,7 @@
 
 Use this file as a skeleton for your own tests
 
-$Id: testATDocument.py,v 1.13 2004/09/23 16:43:03 tesdal Exp $
+$Id: testATDocument.py,v 1.13.4.1 2004/10/31 14:37:52 tiran Exp $
 """
 
 __author__ = 'Christian Heimes'
@@ -12,7 +12,7 @@ import os, sys
 if __name__ == '__main__':
     execfile(os.path.join(sys.path[0], 'framework.py'))
 
-from common import *
+from Products.ATContentTypes.tests.common import *
 
 example_stx = """
 Header
