@@ -2,7 +2,7 @@
 
 Use this file as a skeleton for your own tests
 
-$Id: testATEvent.py,v 1.12 2004/09/17 13:59:28 dreamcatcher Exp $
+$Id: testATEvent.py,v 1.12.4.1 2004/10/31 14:37:52 tiran Exp $
 """
 
 __author__ = 'Christian Heimes'
@@ -12,7 +12,7 @@ import os, sys
 if __name__ == '__main__':
     execfile(os.path.join(sys.path[0], 'framework.py'))
 
-from common import *
+from Products.ATContentTypes.tests.common import *
 from Products.ATContentTypes.Permissions import ChangeEvents
 from Products.ATContentTypes.utils import DT2dt
 
